<resources>
    <string name="app_name">Smart Seller</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Login</string>
    <string name="error_connection">Veuillez vérifier votre connexion à Internet.</string>
    <string name="error_email">Vérifier votre adresse e-mail</string>
    <string name="error_blank_email">Entrez votre adresse e-mail</string>
    <string name="error_blank_password">Entrez votre mot de passe</string>
    <string name="error_blank_lengthpassword">Votre mot de passe doit comporter 8 caractères minimum</string>
    <string name="OK">OK</string>
    <string name="error">Une erreur est survenue</string>
    <string name="info_message_error_network">Veuillez vérifier votre connexion internet</string>
    <string name="error_message_email">Veuillez renseigner votre login</string>
    <string name="error_message_password">Veuillez renseigner le mot de passe</string>
    <string name="error_message_password_length">Le mot de passe doit comporter au moins 6 caractères</string>
    <string name="error_message_invalid_email">Veuillez entrer un email valide</string>
    <string name="ok">Ok</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="identifier">Identifiant</string>
    <string name="hello_blank_fragment">Under construction</string>
    <string name="wrong_credentials">Identifiant ou mot de passe incorrectes</string>
    <string name="title_activity_continuous_capture">ContinuousCaptureActivity</string>
    <string name="se_connecter">Se connecter</string>
    <string name="choisir_la_langue">Choisir la langue</string>
    <string name="fr">FR</string>
    <string name="en">EN</string>
    <string name="ajouter_un_panier">Ajouter un panier</string>
    <string name="ajouter_un_client">Ajouter un client</string>
    <string name="recherche_des_clients">Recherche des clients</string>
    <string name="commencer_la_journ_e">Commencer la journée</string>
    <string name="inventaire">Inventaire</string>
    <string name="recherche_des_produits">Recherche des produits</string>
    <string name="importation_des_caissiers">Importation des caissiers</string>
    <string name="importation_des_clients">Importation des clients</string>
    <string name="importation_des_articles">Importation des Articles</string>
    <string name="importation_des_tarifs">Importation des tarifs</string>
    <string name="importation_des_stocks">Importation des stocks</string>
    <string name="importation_des_dimensions">Importation des dimensions</string>
    <string name="importation_des_cat_gories">Importation des catégories</string>
    <string name="ajouter_client">Ajouter client</string>
    <string name="produit">Produit</string>
    <string name="code_barre">Code à barres</string>
    <string name="r_f_rence">Référence</string>
    <string name="stock">Stock</string>
    <string name="prix">Prix</string>
    <string name="aucun_produit_choisi">Aucun produit choisi</string>
    <string name="annuler">Annuler</string>
    <string name="valider">Valider</string>
    <string name="ajouter_un_produit">Ajouter un produit</string>
    <string name="prix_total">Total</string>
    <string name="re_u_de_paiement">Reçu de paiement</string>
    <string name="total">Total:</string>
    <string name="imprimer">Imprimer</string>
    <string name="email">Email</string>
    <string name="email_">Email:</string>
    <string name="email_du_client">Email du client</string>
    <string name="paiement">Paiement</string>
    <string name="d_tails_de_la_commande">Détails de la commande</string>
    <string name="montant_restant">Montant restant:</string>
    <string name="esp_ce">Espèce</string>
    <string name="ch_que">Chèque</string>
    <string name="carte_bancaire">Carte bancaire</string>
    <string name="valider_le_paiement">Valider le paiement</string>
    <string name="identit">Identité</string>
    <string name="nom_du_client">Nom du client</string>
    <string name="pr_nom_du_client">Prénom du client</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="e_mail">E-mail</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="adresse">Adresse</string>
    <string name="ville">Ville</string>
    <string name="code_postal">Code postal</string>
    <string name="commentaire">Commentaire</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="nom_ou_identifiant_du_client">Nom ou identifiant du client</string>
    <string name="nom_et_pr_nom">Nom et prénom</string>
    <string name="choisir">Choisir</string>
    <string name="nouveau_client">Nouveau client</string>
    <string name="associer_au_panier">Associer au panier</string>
    <string name="associer_au_reservation">Associer au réservation</string>
    <string name="modifier">Modifier</string>
    <string name="t_l_pohone">Télépohone</string>
    <string name="historique">Historique</string>
    <string name="recommandations">Recommandations</string>
    <string name="whishlist">Whishlist</string>
    <string name="commandes">Commandes</string>
    <string name="produits">Produits</string>
    <string name="client">Client</string>
    <string name="date">Date</string>
    <string name="total_">Total</string>
    <string name="supprimer">Supprimer</string>
    <string name="nom_ou_identifiant_du_produit">Nom ou identifiant du produit</string>
    <string name="scan_code">Scan</string>
    <string name="cat_gories">Catégories</string>
    <string name="retour">Retour</string>
    <string name="error_message_set_quantity">Veuillez saisir la quantité</string>
    <string name="error_message_invalid_stock">Vous avez dépassé le stock disponible</string>
    <string name="exit_app_forbidden">You Are Not Allowed to Exit the App</string>
    <string name="dollar">$</string>
    <string name="success_message_product_added">Produit ajouté à la liste ave succès</string>
    <string name="error_message_product_not_added">Produit non ajouté à la liste</string>
    <string name="error_message_set_client">Vous devez choisir le client avant de remplir les produits</string>
    <string name="error_message_non_complete_cart">Le panier n\'est pas complet</string>
    <string name="error_message_invalid_amount">Vous allez dépasser le montant total de la commande</string>
    <string name="error_message_set_firstname">Veuillez indiquer le prénom</string>
    <string name="error_message_set_lastname">Veuillez indiquer le nom</string>
    <string name="error_message_set_birth">Veuillez indiquer la date de naissance</string>
    <string name="error_message_wrong_birth">Veuillez verifier la date de naissance</string>
    <string name="error_message_set_address">Veuillez indiquer l\'adresse</string>
    <string name="error_message_set_zipcode">Veuillez indiquer le code postal</string>
    <string name="error_message_set_city">Veuillez indiquer la ville</string>
    <string name="error_message_set_email">Veuillez indiquer l\'email</string>
    <string name="error_message_set_valid_email">Veuillez entrer un email valide</string>
    <string name="error_message_set_phone">Veuillez indiquer le numéro de téléphone</string>
    <string name="admin_receiver_status_enabled">admin_receiver_status_enabled</string>
    <string name="admin_receiver_status_disable_warning">admin_receiver_status_disable_warning</string>
    <string name="admin_receiver_status_disabled">admin_receiver_status_disabled</string>
    <string name="admin_receiver_status_pw_changed">admin_receiver_status_disabled</string>
    <string name="admin_receiver_status">admin_receiver_status %1s</string>
    <string name="sample_device_admin">sample_device_admin</string>
    <string name="sample_device_admin_description">sample_device_admin_description</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="alert_message_open_journey">Voulez-vous vraiment ouvrir une nouvelle journée?</string>
    <string name="alert_message_close_journey">Voulez-vous vraiment clôturer la journée en cours?</string>
    <string name="vendeur">Vendeur:</string>
    <string name="description">Description</string>
    <string name="date_de_l_inventaire">Date de l\'inventaire</string>
    <string name="cat_gorie_s_lectionn_e">Catégorie sélectionnée</string>
    <string name="particulier">Particulier</string>
    <string name="professionnel">Professionnel</string>
    <string name="info_message_customer_add_success">Le client a été ajouté avec succès</string>
    <string name="info_message_customer_update_success">Les informations du client ont été mises à jour avec succès</string>
    <string name="importation_des_vendeurs">Importation des vendeurs</string>
    <string name="nom_ou_identifiant_du_vendeur">Nom ou identifiant du vendeur</string>
    <string name="basculer">Basculer</string>
    <string name="caissier_vendeur">Caissier/Vendeur</string>
    <string name="vendeur_1">Vendeur</string>
    <string name="d_tails_du_produit">Détails du produit</string>
    <string name="ref">Ref:</string>
    <string name="stock_">Stock:</string>
    <string name="quantit">Quantité</string>
    <string name="address_">Adresse:</string>
    <string name="amount">Montant</string>
    <string name="panier_">Panier</string>
    <string name="panier_en_cours">- Panier en cours</string>
    <string name="nouveau_panier">- Nouveau panier</string>
    <string name="paniers_en_cours">- Paniers en cours</string>
    <string name="r_pertoire_clients">- Répertoire clients</string>
    <string name="customer_list">- Liste des clients</string>
    <string name="reservation_list">- Liste des réservations</string>
    <string name="menu_nouveau_client">- Nouveau client</string>
    <string name="catalogue_des_produits">- Catalogue produits</string>
    <string name="clients">Clients</string>
    <string name="journ_e_ouverture_fermeture">Journée: Ouverture/Fermeture</string>
    <string name="d_connexion_">Déconnexion</string>
    <string name="param_tres">Paramètres</string>
    <string name="produits_menu">Produits</string>
    <string name="info_message_no_pending_cart">Vous n\'avez pas de paniers ouverts</string>
    <string name="empty_customer">Aucun client choisi</string>
    <string name="envoyer_par_email">Envoyer par email</string>
    <string name="send_to">Envoyer à</string>
    <string name="no_et_prenom_">Nom et prénom:</string>
    <string name="error_message_invalid_paiement">Veuillez vérifier le paiement</string>
    <string name="error_message_setup_email">Veuillez vérifier l\'email</string>
    <string name="info_message_submit_paiement">Voulez-vous vraiment valider le paiement ?</string>
    <string name="show">Afficher</string>
    <string name="code_de_l_inventaire">Code de l\'inventaire</string>
    <string name="date_de_cr_ation">Date de création</string>
    <string name="valid">Validé</string>
    <string name="statut">Statut</string>
    <string name="rechercher_par_r_f_rence_ou_fournisseur">Rechercher par référence ou fournisseur</string>
    <string name="cr_er_un_bon_de_commande">Créer un bon de commande</string>
    <string name="fournisseur">Fournisseur</string>
    <string name="quantit_totale">Quantité totale</string>
    <string name="quantit_restante">Quantité restante</string>
    <string name="quantit_re_ue">Quantité reçue</string>
    <string name="date_de_livraison">Date de livraison</string>
    <string name="liste_des_vendeurs">Liste des vendeurs</string>
    <string name="mission">Mission</string>
    <string name="rechercher_le_caisser_vendeur">Rechercher le caisser/Vendeur</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="saisir_code_boutique">Veuillez saisir votre code boutique</string>
    <string name="saisir_code_boutique_1">Code boutique</string>
</resources>