<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"

    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/liste_des_vendeurs"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/rechercher_le_caisser_vendeur"
        android:textColor="@color/lightGray2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rectangle_outline_dark_gray"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edittext_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/nom_ou_identifiant_du_vendeur"
            android:imeOptions="flagNoExtractUi"
            android:padding="5dp"
            android:singleLine="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:src="@drawable/vendor_serach"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textview_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nom" />

        <TextView
            android:id="@+id/textview_identifiant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/prenom" />

        <TextView
            android:id="@+id/textview_mission"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/mission"
            android:visibility="gone" />


    </LinearLayout>

    <View
        android:id="@+id/view_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryTransparent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_sellers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:listitem="@layout/item_seller" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"

        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linearLayout_cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/rectangle_very_dark_gray"
            android:gravity="center"
            android:minWidth="150dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/annuler"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/delete_cross_icon" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_submit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rectangle_primary"
            android:gravity="center"
            android:minWidth="150dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/valider"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/checked_icon" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>