<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    android:clickable="false"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".ui.fragment.PurchasesListFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rectangle_outline_dark_gray"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <EditText

            android:id="@+id/edittext_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/rechercher_par_r_f_rence_ou_fournisseur"
            android:imeOptions="flagNoExtractUi"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />

        <RelativeLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:padding="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/search_icon_btn"
                android:tint="@color/colorAccent" />

        </RelativeLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="true"
        card_view:cardUseCompatPadding="true"
        card_view:elevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="7dp"
                android:visibility="gone">


                <TextView
                    android:id="@+id/textview_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:text="@string/r_f_rence" />

                <TextView
                    android:id="@+id/textView_supplier"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:text="@string/fournisseur" />

                <TextView
                    android:id="@+id/textview_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:text="@string/quantit_totale" />

                <TextView
                    android:id="@+id/textview_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:text="@string/date_de_cr_ation" />


                <RadioButton
                    android:id="@+id/radioButton_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cart_status"
                    android:button="@null"
                    android:clickable="false"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textview_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="0.5"
                    android:ellipsize="none"
                    android:singleLine="true"
                    android:text="@string/statut" />

                <LinearLayout
                    android:id="@+id/linearlayout_actions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical"
                    android:visibility="invisible">


                    <RelativeLayout
                        android:id="@+id/relativeLyaout_show"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@color/colorAccent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginRight="5dp"
                            android:text="@string/show"
                            android:textColor="@color/white" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:id="@+id/view_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimaryTransparent"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView_purchase_orders"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white" />
        </LinearLayout>


    </android.support.v7.widget.CardView>


    <LinearLayout
        android:id="@+id/linearLayout_create_po"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle_primary"
        android:gravity="center"
        android:minWidth="200dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/plus_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cr_er_un_bon_de_commande"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>