<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:singleLine="true"
                android:text="@string/r_f_rence"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textview_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ellipsize="none"
                android:singleLine="true"
                android:text="006/2018" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:singleLine="true"
                android:text="@string/fournisseur"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_supplier"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ellipsize="none"
                android:singleLine="true"
                android:text="xxx" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:singleLine="true"
                android:text="@string/quantit_restante"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textview_quantity_remaining"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ellipsize="none"
                android:singleLine="true"
                android:text="20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:singleLine="true"
                android:text="@string/quantit_re_ue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:ellipsize="none"
                android:singleLine="true"
                android:text="30" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:singleLine="true"
                android:text="@string/date_de_livraison"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textview_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="none"
                android:singleLine="true"
                android:text="01/01/2018" />
        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/view_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimaryTransparent" />

</LinearLayout>