<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ChooseStoreActivity"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/saisir_code_boutique"
            android:textColor="@color/lightGray2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rectangle_outline_dark_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edittext_store_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:ellipsize="end"
                android:hint="@string/saisir_code_boutique_1"
                android:imeOptions="flagNoExtractUi"
                android:padding="5dp"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout_choose_store"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/rectangle_dark_gray"
            android:orientation="vertical"
            android:padding="5dp"
            android:visibility="visible"
            tools:visibility="visible"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/valider"
                android:textSize="20sp"
                android:textColor="@color/white" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>